--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,1 +1,7 @@
-<p>This is the home page</p>
+
+</style>
+<center><h1 style="margin-top:100px; color: black; "><u>Student Details page</u></h1>
+<button  class="btn btn-dark mt-5"><a style="color: white;" href="/addstudent"> <b>Click here to Add Students details</b></a></button><br>
+<button  class="btn btn-dark mt-5"><a style="color: white;" href="/students"><b>Click here to view details of students</b> </a></button>
+
+</center>
