--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -40,14 +40,13 @@
     <header id="header" class="fixed-top " style="background-color: black;">
         <div class="container d-flex align-items-center">
 
-            <h1 class="logo me-auto"><a href="/">Students</a></h1>
+            <h1 class="logo me-auto"><a href="/">Creator's Art Foundation</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" href="/">Home</a></li>
-                    <li><a class="nav-link scrollto" href="#about">About</a></li>
+                    <li><a class="nav-link scrollto" href="/">Home</a></li>
                     <li><a class="nav-link scrollto" href="/students">Students</a></li>
                     <li><a class="nav-link scrollto" href="/addstudent">Add</a></li>
                         <!-- <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li>
@@ -88,10 +87,10 @@
     <footer id="footer" style="background-color: black;">
         <div class="container footer-bottom clearfix">
             <div class="copyright">
-                &copy; Copyright <strong><span>Students App</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>Creator's Art Foundation</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
-                Designed by <a href="https://www.facebook.com/rojantegre04/">Rojan Dhimal</a>
+                Designed by <a href="#">Nabin Bhattarai</a>
             </div>
         </div>
     </footer><!-- End Footer -->
