--- a/src/views/students/list.ejs
+++ b/src/views/students/list.ejs
@@ -8,9 +8,9 @@
       <tr>
         <th scope="col">#</th>
         <th scope="col">Profile</th>
-        <th scope="col">First Name</th>
+        <th scope="col">First Name</th> 
         <th scope="col">Last Name</th>
-        <th scope="col">Email</th>
+        <th scope="col">course</th>
         <th scope="col">Action</th>
       </tr>
     </thead>
@@ -18,14 +18,14 @@
         <% students?.forEach((student,index) => { %>
             <tr>
                 <th scope="row"><%= index + 1  %></th>
-                <td><img src="<%= student?.imageUrl %>" alt="image" class="img-thumbnail" style="height: 100px;" ></td>
+                <td><img src="<%= student?.imageUrl %>" alt="image" class="img-thumbnail" style="height: 100px; width: 140px; border: 1px solid black;" ></td>
                 <td><%= student?.firstname %></td>
                 <td><%= student?.lastname %></td>
-                <td><%= student?.email %></td>
+                <td><%= student?.course %></td>
                 <td>
-                     <a href="#<%= student?.id %>">View</a>
-                     <a href="#<%= student?.id %>">Edit</a>
-                     <a href="#<%= student?.id %>">Delete</a>
+                    <button class="btn btn-dark" ><a href="/student/<%= student?.id %>">View</a></button>
+                    <button class="btn btn-dark" > <a href="/student/edit/<%= student?.id %>">Edit</a></button>
+                    <button class="btn btn-dark" > <a href="/student/delete/<%= student?.id %>">Delete</a></button> 
                 </td>
               </tr>
             <% }) %>
