--- a/src/views/students/form.ejs
+++ b/src/views/students/form.ejs
@@ -1,7 +1,7 @@
 <div class="container">
     <h2 style="margin-top: 100px;">Add Student</h2>
     <hr>
-    <form method="POST" action="/addstudent" enctype="multipart/form-data" class="needs-validation" novalidate>
+    <form method="POST" action="/students/add" enctype="multipart/form-data" class="needs-validation" novalidate>
         <div class="pl-lg-4">
             <div class="row mt-2" >
                 <div class="col-lg-6">
