--- a/src/views/layouts/layout.ejs
+++ b/src/views/layouts/layout.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Restrob Admin Dashboard</title>
+    <title>Student Admin Dashboard</title>
     <!-- Fonts -->
     <link
       rel="stylesheet"
@@ -76,7 +76,6 @@
               class="navbar-brand-img"
               alt="Student"
             />
-            <!-- Restrob -->
           </a>
         </div>
         <div class="navbar-inner">
