--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -18,7 +18,7 @@
                     Total Students
                   </h5>
                   <span class="h2 font-weight-bold mb-0"
-                    ><%- totalRestaurant %></span
+                    ><%- totalStudents %></span
                   >
                 </div>
                 <div class="col-auto">
@@ -31,7 +31,7 @@
                       shadow
                     "
                   >
-                  <i class="fas fa-utensils"></i>
+                  <i class="fas fa-users"></i>
                     <!-- <i class="ni ni-active-40"></i>
                     <i class="fa fa-cutlery" aria-hidden="true"></i> -->
                   </div>
@@ -47,9 +47,9 @@
               <div class="row">
                 <div class="col">
                   <h5 class="card-title text-uppercase text-muted mb-0">
-                    Total Students
+                    New Students
                   </h5>
-                  <span class="h2 font-weight-bold mb-0"><%= totalBooking %></span>
+                  <span class="h2 font-weight-bold mb-0"><%= totalStudents %></span>
                 </div>
                 <div class="col-auto">
                   <div
